# NT_Task

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  database.cpp  database.h  interfaceStorage.h  main.cpp  smartStorage.cpp  smartStorage.h
